--- a/package.json
+++ b/package.json
@@ -6,6 +6,12 @@
   "license": "MIT",
   "dependencies": {
     "@types/node": "^14.14.14",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "nodemon": "^2.0.6",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.1.3"
+  },
+  "scripts": {
+    "start": "nodemon index.ts"
   }
 }
