--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.ts",
   "license": "MIT",
   "dependencies": {
+    "@types/express": "^4.17.9",
     "@types/node": "^14.14.14",
     "express": "^4.17.1",
     "nodemon": "^2.0.6",
